hphp/test/slow/reified-generics/nullable_type_hint-2.php.expectf
Catchable fatal error: Argument 1 passed to f() must be an instance of int, bool given in %s on line 14
